Adicionado ícone na bandeja do sistema e corrigido nome do aplicativo

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
         "electronVersion": "28.1.0",
         "compression": "maximum",
         "asar": true,
-        "forceCodeSigning": false
+        "forceCodeSigning": false,
+        "extraResources": [
+            "tray.png"
+        ]
     }
 }
