Melhorado o ícone da bandeja do sistema e adicionado menu de contexto

--- a/package.json
+++ b/package.json
@@ -33,9 +33,6 @@
         "electronVersion": "28.1.0",
         "compression": "maximum",
         "asar": true,
-        "forceCodeSigning": false,
-        "extraResources": [
-            "tray.png"
-        ]
+        "forceCodeSigning": false
     }
 }
